--- a/web/WEB-INF/templates/default/decorators/include/header.jspf
+++ b/web/WEB-INF/templates/default/decorators/include/header.jspf
@@ -3,23 +3,12 @@
 <%@ taglib prefix="sales" tagdir="/WEB-INF/tags/sales"%>
 <%@ taglib prefix="product" tagdir="/WEB-INF/tags/catalog"%>
 <%@ taglib prefix="content" tagdir="/WEB-INF/tags/content"%>
-<%@ include file="./meta.jspf"%>
-		<%@ include file="./styles2.jspf"%>
-		<%@ include file="./styles3.jspf"%>
-		<%@ include file="./styles5.jspf"%>
-		<%@ include file="./javascripts2.jspf"%>
 		<script type="text/javascript"
 			src="${ctxPath}/scripts/cartmatic/myaccount/loginDlg.js"></script>
 		<script type="text/javascript"
 			src="${ctxPath}/scripts/jquery/plugins/validation/jquery.validate.js"></script>
-	<link rel="stylesheet"
-			href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link href="${resPath}/styles/css/font-awesome.css" rel="stylesheet">
 		<link href="${resPath}/styles/css/bootstrap.css" rel="stylesheet">
-		<link href="${resPath}/styles/css/swiper.min.css" rel="stylesheet">
-		<link href="${resPath}/styles/css/animate.min.css" rel="stylesheet">
 		<link href="${resPath}/styles/css/index.css" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="${resPath}/styles/css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="${resPath}/styles/css/list.css" />
 		<script src="${ctxPath}/scripts/jquery/js/modernizr.custom.js"></script>
 		<script type="text/javascript" src="${ctxPath}/scripts/jquery/js/jquery-1.11.2.min.js"></script>
@@ -32,7 +21,6 @@
 			var tag = getCookie("tag");
 			var error = getCookie("error");
 			if(tag!=""&&tag!=null){
-				   // alert("hello");
 					$(".w-login").show();
 					$(".w-login-left").show();
 					$(".w-login-right").hide();
@@ -73,7 +61,10 @@
 			if(window.location.pathname=="/culturalinformation/index.html" || window.location.pathname=="/Cultural_Service/search.html"){
 				$("#searchForm").attr("action", "${ctxPath}/Cultural_Service/search.html?q="+$("#q").val());
 				$("#searchForm").submit();
-			}else{
+			}else if(window.location.pathname=="/designerList.html" || window.location.pathname=="/designer/initialsSelect.html"){
+				$("#searchForm").attr("action", "${ctxPath}/Designer_Service/search.html?q="+$("#q").val());
+				$("#searchForm").submit();
+				}else{
 			//$("#searchForm").action="${ctxPath}/search-prod.html?q="+$("#q").val();
 			$("#searchForm").attr("action", "${ctxPath}/search-prod.html?q="+$("#q").val());
 			$("#searchForm").submit();
@@ -85,7 +76,7 @@
 		var exp = new Date();
 		exp.setTime (exp.getTime() - 1);
 		var cval = getCookie(name);
-		document.cookie = name + "=" + cval + "; expires="+ exp.toGMTString();
+		document.cookie = name + "=" + cval + "; expires="+ exp.toGMTString()+ "; path=/";
 		}
 		
 	function getCurrentUserId() {
@@ -422,24 +413,23 @@
 						</div>
 					</div>
 				</div>
-				</form>
 			</div>
 		</div>
-		<div class="w-nav w-nav-no w-nav-s navbar-fixed-top">
-			<div class="container" style="position: relative;z-index: 1300;height: 80px;">
-			<div class="w-sea">
+		<div class="w-nav navbar-fixed-top index-nav w-nav-s">
+			<div class="container" style="position: relative;z-index: 1300;">
+				<div class="w-sea">
 					<div class="w-sea-list">
 						<div class="w-sea-sj"></div>
 						<div class="w-sea-con">
 						<!-- 搜索 -->
 						<form  method="get" id="searchForm" action="" >
-								<input name="q" type="text" title="Search for" autocomplete="off" id="q"/>
-								<i class="fa fa-long-arrow-right" onclick="fnUnlock()"></i>
-								</span>
+							<input name="q" type="text" required placeholder="输入搜索内容" class="search_txt" "q">
+                            <input type="submit" class="search_button" value="&rarr;" onclick="fnUnlock()">
 						</form>
 						</div>
 					</div>
 				</div>
+
 				<div class="w-car">
 					<div class="w-car-list">
 						<div class="w-car-sj"></div>
@@ -466,13 +456,13 @@
 								<div class="w-car-price">￥ ${shoppingcart.subtotal == null?0:shoppingcart.subtotal}</div>
 							</div>
 							<div class="w-car-btn">
-								<a class="w-car-btn" href="#">查看购物车</a>
+								<a class="w-car-btn" href="/cart/shoppingcart.html">查看购物车</a>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="row visible-md-block visible-lg-block">
-					<div class="col-md-2 col-lg-2 w-logo"><a href="${ctxPath}/index.html">四方街</a>
+					<div class="col-md-2 col-lg-2 w-logo"><a href="${ctxPath}/index.html" id="w-logot">四方街</a>
 					</div>
 					<div class="col-md-6 col-lg-7">
 						<ul class="w-menu list-unstyled">
@@ -482,13 +472,13 @@
 							</li>
 							<li><a href="${ctxPath}/designerList.html"><span>设计师</span></a>
 							</li>
-							<li><a href="#"><span>关于我们</span></a>
+							<li><a href="${ctxPath}/customer_service/_18.html"><span>关于我们</span></a>
 							</li>
-							<li><a href="#"><span>线下店铺</span></a>
+							<li><a href="${ctxPath}/coming.html"><span>线下店铺</span></a>
 							</li>
 						</ul>
 					</div>
-					<div class="col-md-4 col-lg-3">
+					<div class="col-md-4 col-lg-3" style="padding-bottom: 50px;">
 						<ul class="w-menu-right list-unstyled">
 							<li><a href="javascript:void(0)"><span class="w-gwc">购物车 (${shoppingcart.buyNowItemsCount == null?0:shoppingcart.buyNowItemsCount})</span></a>
 							</li>
@@ -497,7 +487,7 @@
 									class="w-menu-lrzc">注册</span> </a>
 							</li>
 							<li id="loginPromptHolderTemplateLogin">
-								<a href="javascript:void(0)"><span id="username" class="w-gwc"></span> </a> (
+								<a href="javascript:void(0)"><i class="fa fa-user"></i></a> (
 								<a href="${ctxPath}/j_acegi_logout" rel="nofollow" onclick="window.location.href='${ctxPath}/j_acegi_logout'">退出</a>)&nbsp;&nbsp;
 							</li>
 							<li><a href="#"><span class="w-search">搜索</span> </a>
@@ -512,7 +502,7 @@
 					<div class="col-xs-4 col-sm-6 w-logo text-center">
 						<a href="#">四方街</a>
 					</div>
-					<div class="col-xs-4 col-sm-3 text-right w-gwct">
+					<div class="col-xs-4 col-sm-3 text-right w-gwct" style="padding-bottom: 50px;">
 						<a href="javascript:void(0)"><span class="w-gwc">购物车 (0)</span></a>
 					</div>
 
@@ -523,7 +513,7 @@
 				<ul class="w-menush-items list-unstyled">
 					<li><a href="#"><span class="w-menu-on">商城</span></a>
 					</li>
-					<li><a href="#"><span>文化资讯</span></a>
+					<li><a href="list.html"><span>文化资讯</span></a>
 					</li>
 					<li><a href="#"><span>设计师</span></a>
 					</li>
