--- a/web/WEB-INF/templates/default/resources/styles/css/lzw.css
+++ b/web/WEB-INF/templates/default/resources/styles/css/lzw.css
@@ -32,7 +32,7 @@ body{
 	margin-left:-5px;
 	width:11px;
 	height:5px;
-	background:url(../img/sj.gif) 0 0 no-repeat;}
+	background:url(../../images/img/sj.gif) 0 0 no-repeat;}
 .w-nav .w-menush a{}
 .mem_dow{
 	display:none;
@@ -137,7 +137,7 @@ body{
 .mall_left{
 	float:left;
 	width:63%;
-	background-image:url(../img/authors/3.jpg);
+	background-image:url(../../images/img/authors/3.jpg);
 	background-repeat:no-repeat;
 	background-size:cover;
 	background-position:0 100%;}
@@ -262,7 +262,7 @@ body{
 	width:100%;
 	height:100%;
 	padding:0 15%;
-	background:url(../img/bg.png) 0 0 repeat;
+	background:url(../../images/img/bg.png) 0 0 repeat;
 	color:#FFF;}
 .mall_right_title .li1{
 	font-family:FontAwesome;
@@ -306,7 +306,7 @@ body{
 	margin-top:14px;
 	font-size:15px;
 	color:#fbbd6a;
-	background:url(../img/icon.png) right center no-repeat;}
+	background:url(../../images/img/icon.png) right center no-repeat;}
 .new_list{
 	position:relative;
 	margin-bottom:0;}
@@ -384,7 +384,7 @@ body{
 	margin-right:3px;
 	width:12px;
 	height:12px;
-	background:url(../img/icon2.png) 0 0 no-repeat;}
+	background:url(../../images/img/icon2.png) 0 0 no-repeat;}
 .product .li6 .i2{
 	width:13px;
 	background-position:-20px 0;}
@@ -448,7 +448,7 @@ body{
 	margin:-36px 0 0 -36px;
 	width:72px;
 	height:72px;
-	background:url(../img/icon2.png) 0 -20px no-repeat;}
+	background:url(../../images/img/icon2.png) 0 -20px no-repeat;}
 .designer_pagination{
 	position:absolute;
 	left:5%;
@@ -471,7 +471,7 @@ body{
 	z-index:1;
 	width:30px;
 	height:31px;
-	background:url(../img/icon2.png) -120px -20px no-repeat;}
+	background:url(../../images/img/icon2.png) -120px -20px no-repeat;}
 .designer_close{
 	display:none;
 	right:40px;
@@ -479,7 +479,7 @@ body{
 	z-index:1;
 	width:32px;
 	height:32px;
-	background:url(../img/icon2.png) -80px -20px no-repeat;}
+	background:url(../../images/img/icon2.png) -80px -20px no-repeat;}
 .designer_box{
 	position:relative;
 	padding-bottom:80px;
@@ -509,7 +509,7 @@ body{
 	max-width:320px;
 	padding-top:33px;
 	margin:0 auto;
-	background:url(../img/line.gif) center 0 no-repeat;
+	background:url(../../images/img/line.gif) center 0 no-repeat;
 	margin-top:27px;}
 .designer_con .li3 a{
 	margin-top:3px;
@@ -523,7 +523,7 @@ body{
 	display:inline-block;
 	width:24px;
 	height:24px;
-	background:url(../img/icon2.png) -160px -20px no-repeat;}
+	background:url(../../images/img/icon2.png) -160px -20px no-repeat;}
 .designer_con .li4{
 	padding-top:50px;
 	font-size:18px;
@@ -535,7 +535,7 @@ body{
 	max-width:1472px;
 	text-align:center;}
 .title div{
-	background:url(../img/line2.gif) 0 center repeat-x;}
+	background:url(../../images/img/line2.gif) 0 center repeat-x;}
 .title span{
 	display:inline-block;
 	height:40px;
@@ -575,7 +575,7 @@ body{
 	padding-bottom:40px;
 	font-size:48px;
 	color:#313131;
-	background:url(../img/line3.gif) 0 bottom no-repeat;}
+	background:url(../../images/img/line3.gif) 0 bottom no-repeat;}
 .dialogue_info_right .li2{
 	text-align:right;}
 .dialogue_info_right .li2 a{
@@ -588,7 +588,7 @@ body{
 	display:inline-block;
 	width:24px;
 	height:24px;
-	background:url(../img/icon2.png) -160px -20px no-repeat;}
+	background:url(../../images/img/icon2.png) -160px -20px no-repeat;}
 .dialogue_info_right .li3{
 	padding-top:35px;
 	color:#313131;
@@ -620,7 +620,7 @@ body{
 	height:173px;
 	background:#fbbd6a;}
 .title2 div{
-	background-image:url(../img/line4.gif)}
+	background-image:url(../../images/img/line4.gif)}
 .title2 span{
 	background:#a6d5ab;}	
 .designer_news{
@@ -675,7 +675,7 @@ body{
 	margin-left:8%;
 	width:21px;
 	height:9px;
-	background:url(../img/icon2.png) -80px 0 no-repeat;}
+	background:url(../../images/img/icon2.png) -80px 0 no-repeat;}
 .designer_news_info .li5{
 	margin-top:20px;
 	float:right;
@@ -689,25 +689,25 @@ body{
 	margin-right:6px;
 	width:14px;
 	height:14px;
-	background:url(../img/icon2.png) -60px 0 no-repeat;}
+	background:url(../../images/img/icon2.png) -60px 0 no-repeat;}
 .xinlang{
 	color:#fb6e67;
-	background:url(../img/xl.gif) 0 bottom no-repeat;}
+	background:url(../../images/img/xl.gif) 0 bottom no-repeat;}
 .twitter{
 	color:#abdce3;
-	background:url(../img/tw.gif) 0 bottom no-repeat;}
+	background:url(../../images/img/tw.gif) 0 bottom no-repeat;}
 .instagram{
 	color:#ab7d63;
-	background:url(../img/in.gif) 0 bottom no-repeat;}
+	background:url(../../images/img/in.gif) 0 bottom no-repeat;}
 .facebook{
 	color:#3b5b98;
-	background:url(../img/fa.gif) 0 bottom no-repeat;}
+	background:url(../../images/img/fa.gif) 0 bottom no-repeat;}
 .lofter{
 	color:#393e44;
-	background:url(../img/lo.gif) 0 bottom no-repeat;}
+	background:url(../../images/img/lo.gif) 0 bottom no-repeat;}
 .weixin{
 	color:#a8d8b9;
-	background:url(../img/wx.gif) 0 bottom no-repeat;}
+	background:url(../../images/img/wx.gif) 0 bottom no-repeat;}
 .designer_nav{
 	position:fixed;
 	z-index:1;
