--- a/web/WEB-INF/templates/default/resources/styles/css/pro-deta.css
+++ b/web/WEB-INF/templates/default/resources/styles/css/pro-deta.css
@@ -71,15 +71,13 @@ body{ overflow-x:hidden;}
 .deta-bd-group1 .deta-bd-tit a{ color:#333; }
 .deta-bd-group1 .deta-bd-tit a.current{ color:#fbbd6a;}
 
-
-.deta-bd-group1 ul.row{ margin:0; display:block;}
-.deta-bd-group1 ul li{ float:left; position:relative; display:block;}
-.deta-bd-group1 ul li.left{ text-align:center; font-size:20px; width:5%;}
+.deta-bd-group1 ul{ display:-moz-flex; display:-ms-flex;  display:-webkit-flex;  display:flex;}
+.deta-bd-group1 ul li{-moz-flex: 1;  -webkit-flex: 1;  -ms-flex: 1;  flex: 1; position:relative;}
+.deta-bd-group1 ul li.left{ text-align:center; font-size:20px;}
 .deta-bd-group1 ul li.left a{ font-size:60px; color:#757575;}
 .deta-bd-group1 ul li.left a:hover{ color:#444;}
 .deta-bd-group1 ul li.left div{ width:100%; position:absolute; top:50%; margin-top:-165px;}
-.deta-bd-group1 ul li.center{ width:80%;}
-.deta-bd-group1 ul li.row{ margin:0;}
+.deta-bd-group1 ul li.center{-moz-flex:8;  -webkit-flex:8;  -ms-flex:8;  box-flex:8;}
 .deta-bd-group1 ul li.center .bd-list-tit{ margin-top:10px;}
 .deta-bd-group1 ul li.center .bd-list-tit span{ float:right; color:#fbbd6a;}
 .deta-bd-group1 ul li.center .bd-list-tit a{ color:#313131;}
@@ -88,9 +86,9 @@ body{ overflow-x:hidden;}
 .deta-bd-group1 ul li.center p a:hover{ color:#666;}
 .deta-bd-group1 ul li.center p span{ color:#abdce3;}
 .deta-bd-group1 ul li.center p em{ font-style:normal; color:#AAA;}
-.deta-bd-group1 ul li.center img{ width:100%; transition-duration:.5s;}
+.deta-bd-group1 ul li.center img{ width:100%; transition-duration: .5s;}
 .deta-bd-group1 ul li.center a:hover img{ opacity:0.5;}
-.deta-bd-group1 ul li.right{ width:15%;}
+.deta-bd-group1 ul li.right{ padding-left:10px;}
 .deta-bd-group1 ul li.right div{ position:absolute; top:50%; width:100%; margin-top:-90px;}
 .deta-bd-group1 ul li.right p{ font-size:15px; color:#313131;}
 .deta-bd-group1 ul li.right p span{ padding-right:10px;}
@@ -101,7 +99,7 @@ body{ overflow-x:hidden;}
 .deta-bd-group1 ul li.right p a{ display:inline-block; width:80%; background:#fbbd6a; border:solid 2px #fbbd6a; text-align:center; line-height:40px; font-size:12px; color:#FFF;}
 .deta-bd-group1 ul li.right p a:hover{ background:none; color:#fbbd6a;}
 
-.deta-bd-group1 ul li .collocation-item{ float:left; width:25%; position:relative; margin-bottom:15px;}
+.deta-bd-group1 ul li .collocation-item{ float:left; width:25%; position:relative;}
 .deta-bd-group1 ul li .collocation-item img{ width:90%; display:block; margin:0 auto;}
 .deta-bd-group1 ul li .collocation-item .bd-list-tit{ padding:0 5%;}
 .deta-bd-group1 ul li .collocation-item p{ padding:0 5%;}
@@ -125,14 +123,30 @@ body{ overflow-x:hidden;}
 
 .deta-bd-group3{ margin-bottom:80px;}
 
+/*加入购物车后*/
+.successed_add{
+	font-size:15px;
+	text-align:center;
+	border:1px;
+	border-bottom:dashed;
+}
+.successed_add p{
+	padding:0 200px;
+	min-width:300px;
+}
+.successed_add i{
+	color:#fbbd6a;
+	padding-right:10px;
+	font-size:20px;
+	vertical-align: middle;
 
+}
 @media (max-width: 1235px){
 	.w-pro-info{ width:50%;}
 	.w-pro-pic{ width:50%;}
 	.deta-bd-group1 ul li.left{ display:none;}
 	.deta-bd-group1 ul li.right{ display:none;}
-	.deta-bd-group1 ul li.center{ width:100%}
-	.deta-bd-group1 ul li.center p a{ font-size:14px;}
+	.deta-bd-group1 ul li.center{-moz-flex:1;  -webkit-flex:1;  -ms-flex:1;  box-flex:1;}
 }
 
 @media (max-width: 992px){
