Signed-off-by: haroldfu <haroldfu@qq.com>

--- a/web/WEB-INF/templates/default/pages/cart/include/buyNow.jspf
+++ b/web/WEB-INF/templates/default/pages/cart/include/buyNow.jspf
@@ -13,8 +13,8 @@
             <div class="w-car-box-list-tit">
                 <table width="100%" border="0" cellspacing="0" cellpadding="0">
                     <tr>
-                      <td width="2%"><input name="" type="checkbox" value=""></td>
-                      <td width="35%">产品信息</td>
+                      <%--<td width="2%"><input name="" type="checkbox" value=""></td>
+                      --%><td width="35%">产品信息</td>
                       <td width="10%" align="center">删除</td>
                       <td width="12%" align="center">单价</td>
                       <td width="18%" align="center">数量</td>
@@ -37,15 +37,15 @@
 				
             	<table width="100%" border="0" cellspacing="0" cellpadding="0">
             		<tr>
-                        <th width="2%"><input name="" type="checkbox" value=""></th>
-                        <th width="15%">品牌：<a href="${ctxPath}/Designer_Service/designer_datial.html?brandId=${brand.brandId}" class="underline">${brand.brandName}</a></th>
+                        <%--<th width="2%"><input name="" type="checkbox" value=""></th>
+                        --%><th width="15%">品牌：<a href="${ctxPath}/Designer_Service/designer_datial.html?brandId=${brand.brandId}" class="underline">${brand.brandName}</a></th>
                     </tr>
             		<c:forEach items="${shoppingcart.cartItems}" var="item" varStatus="varStatus">
                     <c:if test="${item.productSku.product.brandId==brand.brandId}">
                     
                     <tr>
-                        <td width="2%"><input name="" type="checkbox" value=""></td>
-                        <td width="15%"><product:productImg sku="${item.productSku}" size="e" width="70%"/></td>
+                        <%--<td width="2%"><input name="" type="checkbox" value=""></td>
+                        --%><td width="15%"><product:productImg sku="${item.productSku}" size="e" width="70%"/></td>
                         <td valign="top">
                         	<dl>
                             	<dt>
@@ -151,9 +151,7 @@
                     </ul>
                     <p><b>共计：${appConfig.defaultCurrencySymbol}&nbsp;<span id="cart_sum">${shoppingcart.subtotal}</span></b></p>
                     <p><a href="javascript:void(0);" onclick="javascript:window.location.href='${ctxPath}/checkout/login.html';">
-	                <button id="button2id" name="button2id" class="btn btn-gold" type="button">
 	                确认购买
-	                </button>
                 	</a></p>
                 </div>
             </div>
